--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,9 @@
             android:theme="@style/Theme.AppCompat.DayNight.NoActionBar"
             tools:targetApi="31">
         <activity
+                android:name=".DailyTuneActivity"
+                android:exported="false" />
+        <activity
                 android:name=".SquadActivity"
                 android:exported="false" />
         <activity
